Bug 259250 - Browsing doesn't work when a SVG is opened
Summary: Browsing doesn't work when a SVG is opened
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-08 20:20 UTC by Tomas Trnka
Modified: 2012-10-19 13:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomas Trnka 2010-12-08 20:20:39 UTC
Version:           2.5 (using KDE 4.5.2) 
OS:                Linux

When running gwenview with a SVG file, browsing other files in the same folder is impossible (Next/Previous toolbar buttons are greyed out, View->Browse doesn't show anything). Running gwenview with any of the other (non-SVG) files in the directory works okay (i.e. I can switch to next/prev, including SVG files).

Reproducible: Always

Steps to Reproduce:
gwenview file.svg

Actual Results:  
Next/prev buttons greyed out
Comment 1 David Greengas 2010-12-10 18:11:43 UTC
I can confirm this bug. I tried opening gwenview as specified pointing to one single svg and could not use previous next. Then I opened gwenview without specifying a file and I was able to move through the images without problem. Then I used gwenview to open a png file specifically and could use previous and next as expected with the svg file included.
Comment 2 Aurelien Gateau 2010-12-17 16:32:26 UTC
SVN commit 1207355 by gateau:

Emit loaded() signal for svg images (and probably videos as well)

BUG:259250

 M  +4 -0      documentview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207355