Emit loaded() signal for svg images (and probably videos as well)

BUG:259250

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1207355